# blockchain-poc

./: README.md  docker-compose.yaml
blockchain/: Dockerfile  app.py  config.py  pyproject.toml
blockchain/api/: __init__.py  status.py
blockchain/models/: block.py  transaction.py
blockchain/services/: blockchain.py
