[tool.poetry]
name = "blockchain"
version = "0.1.0"
description = ""
authors = ["mheddi <mohcine.heddi@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^2.0.1"
pytest = "^6.2.4"
ipython = "^7.24.1"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
